nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-dep-pod
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"       
          limits:
            memory: "256Mi"
            cpu: "200m"
        volumeMounts:  # Mounting the persistent volume claim to the container.
         - name: my-volume
           mountPath: /usr/share/nginx/html
        livenessProbe:    # Checks if the app is still alive — if it fails repeatedly, the container will be restarted.
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        readinessProbe:     # Checks if the app is ready to receive traffic — if it fails, the pod is removed from the Service endpoints.
          httpGet:  
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3  
      volumes:  # Defining the persistent volume claim to be used by the pod.
      - name: my-volume 
        persistentVolumeClaim:
          claimName: my-pvc  # The name of the persistent volume claim to use.
