nginx/nginx-networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 82
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  namespace: apache        
spec:
  ingressClassName: nginx
  rules:      
  - host: apache.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 80
